# itemizer

./: .gitignore  Cargo.toml  README.md
client/: .gitignore  index.html  package-lock.json  package.json
client/public/: champions.json
client/src/: App.vue  main.ts  styles.css
client/src/components/: Calculator.vue  ChampSelect.vue
client/src/router/: index.ts
client/src/routes/: +page.svelte
client/src/routes/calc/: +page.svelte
client/src/views/: CalculatorView.vue  HomeView.vue
client/utils/: fetchChampions.js
server/: Cargo.toml
server/src/: champion.rs  item.rs  main.rs  player.rs  stats.rs
src/: calculator.rs  champion.rs  download.rs  downloadlink.rs  item.rs  main.rs  runes.rs  version.rs
