[package]
name = "yespls"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.28", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"  # For decompression
tar = "0.4"     # For extracting .tar.gz files

