[package]
name = "yespls"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0", features = ["postgres"] }
